# Game

./: .gitignore  INSTALL  Makefile  README  configure  configure.ac  install-sh  ugaagga.conf.dist
src/: Makefile.in
src/admintools/: Menu.lib.php  Menu_Item.lib.php  Module_Base.lib.php  config.inc.php  config.inc.php.dist  db.inc.php  dbconfig.inc.php  dbconfig.inc.php.dist  index.php  lib.inc.php  modules_config.inc.php  params.inc.php
src/admintools/modules/Module_Artefacts/: Module_Artefacts.php  artefact.lib.php
src/admintools/modules/Module_Awards/: Module_Awards.lib.php  Module_Awards.php  award.lib.php
src/admintools/modules/Module_Cave/: Module_Cave.php
src/admintools/templates/: framework.ihtml
src/config/: README  config.c.xsl  config.dtd  config.h.xsl  config.php.xsl  config.sql.xsl  effects.php.xsl  government.dtd  government.php.xsl  hero.dtd  hero.php.xsl  relations.dtd  relations.php.xsl  start.dtd  start.php.xsl  techtree.pl  trade.php.xsl  wonder.php.xsl  xml-indent.pl
src/dbs/: db-util.in  game.sql
src/game/Lib/: Autoloader.php  Config.php  Controller.php  Database.php  Model.php  Movement.php  Request.php  Session.php  Template.php
src/game/Lib/Model/: Cave.php  (+1 more)
src/game/include/: MenuItem.class.php  Player.php  artefact.html.php  artefact.inc.php  auth.inc.php  award.html.php  basic.lib.php  cave.html.php  chat.inc.php  chatLog.html.php  config.inc.php.in  db.functions.php  db.inc.php  defense.html.php  defense.inc.php  defenseDetail.html.php  delete.html.php  digest.html.php  digest.inc.php  doYouKnow.html.php  donations.html.php  effectWonderDetail.html.php  export.inc.php  formula_parser.inc.php  hero.html.php  hero.inc.php  improvement.html.php  improvement.inc.php  improvementDeleteConfirm.html.php  improvementDetail.html.php  improvement_building_detail.html.php  map.html.php  map.inc.php  merchant.html.php  message.html.php  message.inc.php  messageParser.inc.php  modus.inc.php  movement.lib.php  news.html.php  (+42 more)
src/game/lib/: Controller.php  Model.php  Movement.php  View.php
src/phpext/: uaconfig.c  uaconfig.h
src/po/: en_US.po
src/rules/: config.inc.php  config.inc.php.dist  formula_parser.inc.php  index.php  lib.inc.php  modules_config.inc.php  params.inc.php
src/rules/include/: basic.inc.php  modules.inc.php  params.inc.php  parser.inc.php  template.inc.php
src/rules/templates/: base.tmpl  building.ihtml  building.tmpl  buildingsStats.tmpl  buildingstats.ihtml  defenseSystem.ihtml  defenseSystem.tmpl  defensesStats.tmpl  defensestats.ihtml  framework.ihtml  framework_old.ihtml  governments.ihtml  governments.tmpl  governments_old.ihtml  relations.ihtml  relations.tmpl  resource.ihtml  resource.tmpl  resourcesStats.tmpl  resourcestats.ihtml  science.ihtml  science.tmpl  sciencesStats.tmpl  skill.tmpl  skillStats.tmpl  unit.ihtml  unit.tmpl  unitStats.tmpl  unitsEncumbrance.tmpl  unitsencumbrance.ihtml  unitstats.ihtml  wonder.ihtml  wonder.tmpl  wondersStats.tmpl  wondersstats.ihtml
src/ticker/: artefact.c  artefact.h  artefact_handler.c  building_handler.c  calc_battle.c  calc_battle.h  cave.c  cave.h  chat_handler.c  check_config.c  config.c  config.h  database.c  database.h  defense_handler.c  event_handler.c  event_handler.h  except.c  except.h  expression.c  expression.h  function.c  function.h  hashtable.c  hashtable.h  hero.c  hero.h  hero_handler.c  logging.c  logging.h  memory.c  memory.h  message.c  message.h  movement_handler.c  object.c  object.h  resource_ticker.c  resource_ticker.h  scanner.c  (+17 more)
src/ticker/tests/: check.c  config.c  config.data  except.c  hashtable.c  memory.c  scanner.c  template.c
src/utilities/: README  adjustEffects.php  calcStartValues.script.php  cave_names.php  createCave.php  createDailyPlayerSheet.php  createDailyRelationSheet.php  createDailySpreadSheet.php  createOldTribes.sql  createRelationsAsPic.php  createTerrainFromMapfile.php  crontab.in  db_backup.cron.in  deleteInactives.script.php  deleteNotActivated.script.php  deleteOutdatedMessages.php  deletePlayer.script.php  deleteTakeoverCavesOfTribless.php  diminishMap.php  diminishMap_oldDb.php  fadingTribePoints.php  fightAllCaves.php  generategamestats.script.php  generateunitstats.script.php  halfgodstats.script.php  inconsistency.php  initializeSecureCaveCredits.script.php  login_multi_ip.php  logrotate.conf  mailanalle.php  monsterverteil.php  moral.script.php  multicheck.php  multirotate.php  namen.txt  placeArtefact.php  ranking.php  repairMissingStartSciences.php  runTests.script.php  spreadVoid.php  (+10 more)
src/www/: config.inc.php.in  dberror.html.php  error403.html.php  export.php  finish.php  json.php  logout.php  main.php  mapstyle.php  menu.php  sessionstart.php  ugastart.php
src/www/css/: bootstrap.min.css  form.css  ie.css  jappix-mini-ie.css  jappix-mini.css  styles.css  tabs.css  typography.css
src/www/images/: README  minimap.php  minimap.png.php  stringup.png.php
src/www/js/: ajax-loading.js  jappixmini.js  jquery-ui-1.10.1.custom.min.js  jquery-ui-1.9.2.custom.min.js  jquery.cookie.js  jquery.countdown-1.5.11.min.js  jquery.countdown.min.js  jquery.form.js  jquery.jqDock-1.9.min.js  jquery.jqDock.min.js  jquery.jqdock.min.js  jquery.notification.min.js  jquery.ui.min.js  jquery.url.js  ua.js
src/www/simulator/: response.ihtml  response.php  simulator.ihtml  simulator.php  style000.css
(+248 files in other folders)
